api-gateway/deployment/gateway/httproute-order-service.yml
# httproute-order-service.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: order-service-route
  namespace: api-gateway
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/orders
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: jwt-auth-middleware
      backendRefs:
        - name: order-service
          port: 80
