api-gateway/deployment/gateway/httproute-user-service.yml
# httproute-user-service.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: user-service-route
  namespace: api-gateway
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth/login
        - path:
            type: PathPrefix
            value: /auth/signup
      backendRefs:
        - name: user-service
          port: 8003
